feat: add task2

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Первое задание</title> 
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">Текст для хедера</header>
@@ -24,6 +25,7 @@
                 <p class="greeting-box-text">Hello, World!</p>
                 <button class="greeting-box-button">Поменять приветствие</button>
             </div>
+            <img src="images/Cat_gamer.jpg" alt="Cat Gamer" class="content-main-img">
         </div>
 
         <div class="content-aside-right">
